--- a/Modelo Candidato/frontend/templates/login.html
+++ b/Modelo Candidato/frontend/templates/login.html
@@ -1,109 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Inicia sesion en Comitatus</title>
-    <style>
-        /* Bordered form */
-
-        h1 {
-            text-align: center;
-        }
-        form {
-        border: 3px solid #f1f1f1;
-        }
-
-        /* Full-width inputs */
-        input[type=text], input[type=password] {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
-        }
-
-        /* Set a style for all buttons */
-        button {
-        background-color: #04AA6D;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-        }
-
-        /* Add a hover effect for buttons */
-        button:hover {
-        opacity: 0.8;
-        }
-
-        /* Extra style for the cancel button (red) */
-        .cancelbtn {
-        width: auto;
-        padding: 10px 18px;
-        background-color: #f44336;
-        }
-
-        /* Center the avatar image inside this container */
-        .imgcontainer {
-        text-align: center;
-        margin: 24px 0 12px 0;
-        }
-
-        /* Avatar image */
-        img.avatar {
-        width: 200px;
-        height: 300px;
-        border-radius: 50%;
-        }
-
-        /* Add padding to containers */
-        .container {
-        padding: 16px;
-        }
-
-        /* The "Forgot password" text */
-        span.psw {
-        float: right;
-        padding-top: 16px;
-        }
-
-        /* Change styles for span and cancel button on extra small screens */
-        @media screen and (max-width: 300px) {
-        span.psw {
-            display: block;
-            float: none;
-        }
-        .cancelbtn {
-            width: 100%;
-        }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <title>Document</title>
 </head>
-<h1>Inicia sesion en Comitatus</h1>
-<form method="POST">
-    <div class="imgcontainer">
-      <img src="../static/unsa.png" width=200 height="300" alt="Avatar" class="avatar">
-    </div>
+<body>
   
-    <div class="container">
-      <label for="cui"><b>CUI</b></label>
-      <input type="text" placeholder="Escriba su CUI aqui" name="cui" required>
-  
-      <label for="contrasenia"><b>Contrasena</b></label>
-      <input type="password" placeholder="Escriba su contrasena aqui" name="contrasenia" required>
-  
-      <button type="submit">Login</button>
-      <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
-      </label>
-    </div>
-  
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <span class="psw">No estas registrado? <a href="../signup">Registrate</a></span>
-    </div>
-  </form>
+<form>
+  <!-- Email input -->
+  <div class="form-outline mb-4">
+    <input type="email" id="form2Example1" class="form-control" />
+    <label class="form-label" for="form2Example1">Email address</label>
+  </div>
 
+  <!-- Password input -->
+  <div class="form-outline mb-4">
+    <input type="password" id="form2Example2" class="form-control" />
+    <label class="form-label" for="form2Example2">Password</label>
+  </div>
+
+  <!-- 2 column grid layout for inline styling -->
+  <div class="row mb-4">
+    <div class="col d-flex justify-content-center">
+      <!-- Checkbox -->
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+        <label class="form-check-label" for="form2Example31"> Remember me </label>
+      </div>
+    </div>
+
+    <div class="col">
+      <!-- Simple link -->
+      <a href="#!">Forgot password?</a>
+    </div>
+  </div>
+
+  <!-- Submit button -->
+  <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+
+  <!-- Register buttons -->
+  <div class="text-center">
+    <p>Not a member? <a href="#!">Register</a></p>
+    <p>or sign up with:</p>
+    <button type="button" class="btn btn-link btn-floating mx-1">
+      <i class="fab fa-facebook-f"></i>
+    </button>
+
+    <button type="button" class="btn btn-link btn-floating mx-1">
+      <i class="fab fa-google"></i>
+    </button>
+
+    <button type="button" class="btn btn-link btn-floating mx-1">
+      <i class="fab fa-twitter"></i>
+    </button>
+
+    <button type="button" class="btn btn-link btn-floating mx-1">
+      <i class="fab fa-github"></i>
+    </button>
+  </div>
+</form>
+</body>
 </html>
+
+
