--- a/frontend/templates/evento.html
+++ b/frontend/templates/evento.html
@@ -40,8 +40,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="post-heading">
-                            <h1>Acá va el título</h1>
-                            <h2 class="subheading">Franci Suni Lopez</h2>
+                            <h1>{{ evento.nombre }}</h1>
+                            <h2 class="subheading">{{ evento.ponente.nombre}} {{evento.ponente.apellido}}</h2>
                             <span class="meta">
                                 Inicio: 
                                 <a href="#!">25 de agosto</a>
