--- a/frontend/templates/evento.html
+++ b/frontend/templates/evento.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Clean Blog - Start Bootstrap Theme</title>
+        <title>Pagina de Evento</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">UNSA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -44,7 +44,7 @@
                             <h2 class="subheading">{{ evento.ponente.nombre }} {{ evento.ponente.apellido }}</h2>
                             <span class="meta">
                                 Ir al perfil del  
-                                <a href="{{ url_for('Profile', id=evento.ponente.id )}}">ponente</a>
+                                <a href="{{ url_for('Profile', id=evento.ponente.id )}}"><u>ponente</u></a>
                             </span>
                         </div>
                     </div>
