--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>Sistema de publicación de Eventos</h1>
-                            <span class="subheading">Realizado para el curso de Edguitar</span>
+                            <span class="subheading">Realizado para estar lo mas pendientes posible de las ultimas novedades de la computacion</span>
                         </div>
                     </div>
                 </div>
@@ -67,61 +67,6 @@
                     <!-- Divider-->
                     <hr class="my-4" />
                     {% endfor %}
-                    <div class="post-preview">
-                        <a href="post.html">
-                            <h2 class="post-title">Franci Suni, sobre los avances en computación cuántica.</h2>
-                            <h3 class="post-subtitle">Una de las mentes más brillantes del país, demuestra su dominio en uno de los campos más avanzados actualmente.</h3>
-                        </a>
-                        <p class="post-meta">
-                            Publicado por 
-                            <a href="#!">Uberto García Cáceres</a>
-                            el 7 de Septiembre, 2022
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="post.html">
-                            <h2 class="post-title">Wilber Lovón Ramos, anuncia su retiro. </h2>
-                            <h3 class="post-subtitle">Gracias Dios.</h3>
-                        </a>
-                        <p class="post-meta">
-                            Publicado por
-                            <a href="#!">Samuel Chambi</a>
-                            el 28 de Agosto, 2022
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="post.html">
-                            <h2 class="post-title">El futuro está en el Machine Learning</h2>
-                            <h3 class="post-subtitle">Franky Bernedo defiende la importancia de la estadística y los métodos estocásticos, para predecir el futuro del país.</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">David Tamo Turpo</a>
-                            20 de Agosto, 2022
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="post.html">
-                            <h2 class="post-title">Fallar no es opción</h2>
-                            <h3 class="post-subtitle">Un estudiante de Ciencias de la Computación en la UNSA nos cuenta su experiencia en la carrera.</h3>
-                        </a>
-                        <p class="post-meta">
-                            Publicado por
-                            <a href="#!">Jesús Vilca</a>
-                            el 4 de Abril, 2022
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
                     <!-- Pager-->
                     <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Eventos anteriores →</a></div>
                 </div>
@@ -150,7 +95,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://github.com/josueSU-UNSA/Final_Project_Software_Engineer">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -158,7 +103,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Ingenieria de Software I - UNSA 2022</div>
                     </div>
                 </div>
             </div>
