--- a/frontend/templates/evento.html
+++ b/frontend/templates/evento.html
@@ -57,8 +57,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>
-                            Acá va una descripción chevere.
-                            Jubilen al Wilber p kaumsa. 
+                            {{ evento.detalles }}
                         </p>
                     </div>
                 </div>
