--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -23,8 +23,8 @@
                                         <span class="text-primary">Ponente</span>
                                     </div>
                                     <ul class="list-unstyled mb-1-9">
-                                        <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Posición:</span> Ponente. profesor</li>
-                                        <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Experiencia:</span> Nula</li>
+                                        <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Posición:</span> Ponente</li>
+                                        <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Experiencia:</span> Profesor en UNSA</li>
                                         <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Email:</span>{{ ponente.correo }}</li>
                                     </ul>
                                     <ul class="social-icon-style1 list-unstyled mb-0 ps-0">
