--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -11,6 +11,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>  
 <title>Login</title>
+<form method="post">
   <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -24,12 +25,12 @@
                 <p class="text-white-50 mb-5">Ingresa su usuario y contraseña</p>
   
                 <div class="form-outline form-white mb-4">
-                  <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                  <input type="email" id="typeEmailX" name="typeEmailX" class="form-control form-control-lg" />
                   <label class="form-label" for="typeEmailX">Usuario</label>
                 </div>
   
                 <div class="form-outline form-white mb-4">
-                  <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                  <input type="password" id="typePasswordX" name="typePasswordX" class="form-control form-control-lg" />
                   <label class="form-label" for="typePasswordX">Contraseña</label>
                 </div>
   
